--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 I previously worked as a Surveillance Operator and am now pursuing further education in the IT field to 
                 enhance my skills and stay current with industry advancements.
             </h2>
-            <img class="image image1 slide-right " src="/images/rb_3863.png" alt="person">
+            <img class="image image1 slide-right " src="images/rb_3863.png" alt="person">
         </div>
 
         <!-- The Work Experience -->
@@ -73,7 +73,7 @@
                 surveillance and timely response to any security-related incidents.
             </h2>
             <!-- This is the image in the Work Experience -->
-            <img class="image image2 slide-left" src="/images/cctv.png" alt="Monitor with CCTV Camera inside">
+            <img class="image image2 slide-left" src="images/cctv.png" alt="Monitor with CCTV Camera inside">
         </div>
 
         <!-- The Skills acquired by watching online courses -->
@@ -82,9 +82,9 @@
                 Knowlegdeable in:
             </h1>
             <div class="logo">
-                <img class="image slide-left" src="/images/html-5_5968267.png" alt="HTML Logo">
-                <img class="image fade-in" src="/images/css_919826.png" alt="CSS Logo">
-                <img class="image slide-right" src="/images/js_5968292.png" alt="Javascript Logo">
+                <img class="image slide-left" src="images/html-5_5968267.png" alt="HTML Logo">
+                <img class="image fade-in" src="images/css_919826.png" alt="CSS Logo">
+                <img class="image slide-right" src="images/js_5968292.png" alt="Javascript Logo">
             </div>
             <ul>
                 <li>HTML (Hypertext Markup Langauge)</li>
